--- a/code/Rmarkdown/expose.Rmd
+++ b/code/Rmarkdown/expose.Rmd
@@ -1,164 +1,88 @@
 ---
-title: "Expose Master Thesis Lepke"
-output: 
-  pdf_document:
-    citation_package: natbib
-bibliography: ["packages.bib", "literature.bib"]
-biblio-style: "apalike"
+title: "Master Thesis Lepke"
+author: "Dario Lepke"
+date: "14.04.21"
+output:
+  bookdown::html_document2: default
+  pdf_document: Null
+bibliography: expose-lib.bib
+biblio-style: apalike
+link-citations: yes
 ---
-```{r, include=FALSE}
-knitr::write_bib(c("knitr", "stringr"), file = "packages.bib")
+## Introduction {-}
+
+With future climate change droughts in the Amazon forest may become more
+frequent and/or severe. Droughts can turn Amazon regions from rain forest into
+savanna, leading to high amounts of carbon released into the atmosphere.
+Therefore, predicting future droughts and understanding the underlying mechanisms 
+is of great interest. @ciemer2020early, established an 
+early warning indicator for Amazon droughts or a drought index, based on tropical Atlantic sea surface 
+temperatures (SSTs). In my thesis I would like to build on this work and improve the 
+predictive power by using different statistical methods.
+Meaning, we seek to build a model that is able to predict droughts based on preceding
+sea temperatures, desirably with as much lead time as possible. Also we want to 
+identify those sea regions that are most important for doing so, making interpretability point of interest, too. A first model could be a LASSO approach
+trying to identify the most important oceanic regions and the respective time-scales.
+
+The thesis will be done in cooperation with Dr. Niklas Boers from the Postdam Institute for Climate Impact Research (@PIC).
+
+## Summary @ciemer2020early {-}
+
+As already mentioned the paper by @ciemer2020early, created an early warning
+indicator for Amazon droughts. They did so using a complex network approach.
+For this they use two datasets, one for the Sea Surface Temperatures (@smith2008improvements) and one for
+the Rainfall (@funk2015climate) with monthly data for the time period of 1981 until 2016. The data can be downloaded for example in netcdf format and can be manipulated conventiently with Climate Data Operators (CDO, @schulzweida2019cdo). CDO in turn can be used with wrappers for R and Python. The data is organized on a longitude/latitude grid.  
+They identify 4 oceanic regions that correlate the most with rainfall in the amazon basin, using a coupled network approach.
+Figure \@ref(fig:cross) shows the cross degree towards rainfall in the Central Amazon Basin (CBA, blue box), for positive and negative correlations. Darker shades indicate a larger cross degree, hence a larger number of links and correlations with rainfall at more grid points in the CBA.  
+The correlations are measured using a spearson rank-order correlation coefficient\
+\[
+ \rho = 1 - \frac{6\sum\Delta_{R_i}^2}{n(n^2-1)}  .
+\]
+Where $\Delta_{R_i}$ denotes the difference between the ranks of observations of both variables at the same time $i$ and $n$ is the number of observations.
+An Adjacency Matrix describes the resulting network, where the threshold $p_{th}$ was chosen so that only 10% of the strongest correlations are represented as links in the network\
+\[
+A_{ij} = \begin{cases}0p_{ij} < p_{th}\\ 1p_{ij}\geq p_{th}\\\end{cases}  .
+\]
+The cross degree then gives the strength of correlation between a specific grid point $i$ of network $V_l$ (oceanic grid point) and another (sub)network $V_m$ (all grid points $j$ in central amazon basin)\
+\[
+k_{i}^{lm} = \sum\limits_{j \in V_m} A_{ij}, i \in V_l\  .
+\]
+
+```{r cross, echo = FALSE, fig.align = 'center', out.width = "50%", fig.cap='"Cross degree between sea surface temperature and continental rainfall anomalies. For each sea surface temperature grid cell of the Atlantic and Pacific Ocean, the cross degree towards rainfall in the Central Amazon Basin (blue box) is shown, for a positive correlations and b negative correlations. Darker shading indicates a larger cross degree, implying a larger number of links, and thus significant correlations with rainfall at more grid points in the Central Amazon Basin. Red areas outline coherent oceanic regions with a the 20% highest cross degrees for positive correlations, found in the Southern Pacific Ocean (SPO) and Southern Tropical Atlantic Ocean (STAO), and b the 20% highest cross degrees for negative correlations, found in the Central Pacific Ocean (CPO) and Northern Tropical Atlantic Ocean (NTAO)" [@ciemer2020early]'}
+knitr::include_graphics("../../figures/cross-degree.jpg")
 ```
 
-Short summary:
-Improve Climate Model future projections by 
-using obersvational data and Machine Learning
-With future climate change, droughts in the Amazon forest may become more
-frequent and/or severe. Droughts can turn Amazon regions from
-rain forest into savanna, leading to high amounts of carbon
-released into the atmosphere.
-Past research has shown that there is a relatioship between
-Sea Surface Temperatures (SSTs) in the Tropical Atlantic/Pacific and
-precipation in the Amazon.[@schneider2018statistical]
-Step one in my thesis will be to quantify this relationship further,
-using different approaches and compare them to each other.
-So I am trying to find a predictive (interpretable) model
-that can predict precipation from SST time series and possibly other variables.
-If such a mechanism is found it can be used as a so called "emergent
-constraint".
-Since different climate models give different answers about future climate change,
-there is a need to narrow the so called "spread".
-Here we try to constrain this spread by using information from observations.
-We can evaluate a climate models realism by comparing it's simulated variable
-to actual observed variables. And assume that models that simulate present climate
-well, simulate future climate variables well, too.
-The models future projections then get rescaled according to how well they fit
-the present climate variable.
-(Much simplified) We rescale a models future projection (i.e rain) by how well it fits the current observable data.
-Then we can use a ML approach to
-learn function: 
-f(model data of present climate variable) = rescaled model projection and
-predict: f(observed data of present climate variable) = projection of
-validate with CV etc.
-This can be learned f.e by Gradient Boosting Regression Trees
+They further explore the relationship by constructing (weighted) networks for sliding windows of 24 months between the Central Amazon Basin and each of the ocean regions. For each month except for the first two years, an individual network is computed based on the data of the previous 24 months.
+Then they take the average of the cross correlations for each of the networks which gives a new time series of average cross correlation (ACC) values.
+Each ACC summarizes the connectivity of one region with the CAB for the last 24 months.  
+They find that NTAO and STAO give the strongest signal, hence they apply the same sliding window coupled network approach between the ocean regions NTAO and STAO.
+Before they computed networks between ocean and continental regions, now it is computed between these two atlantic regions, NTAO and STAO.  
+The resulting time series and its comparison to the drought index time series is shown in figure \@ref(fig:early) below.
+They find that using a ACC threshold for a drought (SPI below -1.5), lets them
+forecast 6 of the 7 droughts in the observation period, missing the 2005 drought, while also giving one false alarm in 2002. 
 
-Longer explanation:
-Motivation:
-  Amazonas, carbon sink
-  Amazonas, important for many lives water biodiversity
-Related Work SST amazonas:
-Emergent Constraint:
-Related Work GBRT:
-The data:
-Next steps
+```{r early, echo = FALSE, fig.align='center' ,out.width="75%", fig.cap='"Early-warning signal for droughts in the central Amazon basin. We compare the time evolution of the average cross correlation of the Northern Tropical Atlantic Ocean (NTAO) and Southern Tropical Atlantic Ocean (STAO), given by the blue curve, with the standardized precipitation index (SPI, orange) of the central Amazon basin. Orange dips indicate a negative SPI with a threshold for severely dry periods (SPI -1, dotted red line). We expect a drought event within the following one and a half years whenever the average cross correlation between NTAO and STAO SST anomalies falls below an empirically found threshold of −0.06. Green circles indicate a matching forecast based on the Atlantic SST correlation structure, with one false alarm in 2002 indicated by a grey circle, where the threshold is crossed but no drought took place in the direct aftermath (see Discussion). The temporal evolution of the average cross correlation shown here is smoothed using a Chebyshev type-I low-pass filter with a cutoff at 24 months" [@ciemer2020early].'}
+knitr::include_graphics("../../figures/early-warning-signals.jpg")
+```
 
+## Outlook {-}
+The work by @ciemer2020early shows potential forecasting capabilities and limitations.
+While they are able to predict 5 out of 6 drought events, they also give one false negative and one false positive result. Their work uses a complex network approach that is applied stepwise (first two unweighted networks, then two weighted networks 
+and in the end a dichotomous threshold decision rule). For the thesis we would like
+to create a more general predictive model that can learn the relationship between the
+SSTs and rainfall in the CAB. As already mentioned a first step can be a LASSO model.
+After finding a baseline model we would like to investigate how perfomance can be improved by adding more complexity, either by using more complex models and/or
+using longer time ranges of data. This of course has to take into account that older data may be less reliable.  
+Depending on how well this relationship can be established, we can take this 
+a step further and use it as a so called "Emergent Constraint" (EC).
+Since different climate models give different answers about future climate 
+there is a need to narrow this "spread", which can be done by ECs.
+To do so, we need a plausible relationship between a Variable X and Y (here: SST and drought).  
+According to how well the relationship is represented in a climate model we 
+assign "credibility" to a climate model's future projections 
+(here: projections of future droughts in the Amazon rain forest). 
+In summary this can be used to reduce uncertainty in the ensemble of 
+climate models' future projections, f.e by using ML techniques as done by
+@schlund2020constraining.
 
-
-
-
-written 31.01:
-Tropical rainforests constitute large global carbon sinks,
-making them an important factor for assessing future climate change.
-Droughts can have a major impact on these ecosystems and their function
-as carbon sinks, as was seen in the Amazon drought of 2010, which had a total biomass carbon impact of 2.2 PgC.
-Therefore drought forecasting poses an important challenge to solve.
-Earlier work has studied the connection between sea surface temperatures
-(SST) and precipation in the Amazon basin. The authors created an 
-early-warning indicator for Amazon droughts based on tropical Atlantic
-SSTs. While this approach worked reasonably well, they focused solely
-on the tropical Atlantic, to predict droughts indicated by a drought
-threshold. Another interesting challenge is to predict precipation
-in the Amazonas in general, based on SSTs.
-Hence the first task in my Master Thesis is to fit a predictive model,
-that can forecast the precipation in the Amazonas.
-The connection of SST and precipation might be linked to certain areas
-in the ocean or a specific mechanism. The authors named earlier,
-for example identified a dipol between the northern and southern
-transatlantic ocean (NTAO, STAO respectively), as indicator for future droughts.
-
-partly from draft, partly from alex hall and ucla:
-With future climate change, droughts in the Amazon forest may become more
-frequent and/or severe. Droughts can turn Amazon regions from
-rain forest into savanna, leading to high amounts of carbon
-released into the atmosphere.
-Past research has shown that there is a relationship between
-Sea Surface Temperatures (SSTs) in the Tropical Atlantic/Pacific and
-precipation in the Amazon.
-Step one in this thesis will be to quantify this relationship further
-using different approaches and compare them to each other.
-So I am trying to find a predictive (interpretable) model
-that can forecast precipation from SSTs and possibly other variables.
-If such a mechanism is found it can be used as a so called "emergent
-constraint".
-Since different climate models give different answers about future climate change, there is a need to narrow this so called "spread".
-When analyzing global climate models, we might find a relationship between an observable variable A of the current climate and B of future climate projections. Because the observed measurements of the predictor
-A can be used to constrina the models' responses B, relationship
-between A and B is called emergent constraint.
-Variable A may be a characteristic of the climate system (humidity, winds, etc) or characterize natural variations (in he seasonal cycle, or
-from year to year).
-Once A is estimated observationally, we can use the emergent constraint to judge a model's realism and narrow down the spread of future climate 
-projections. 
-
-
-So we need a variable, that we can measure in the real world and have historical data of (i.e. X) and a variable that is of importance for the future climate (Y).
-
-
-
-
-A classic example for an emergent constraint is the Arctic sea-ice albedo feedback. Ice 
-
-Different climate models have different values for the
-
-reflectivity of sea-ice areas. This has a direct influence on each climate
-model's projection of future global warming, measured in climate sensitivity. Climate sensitivity defined as follows, how much does 
-global average temperatures rise when the amount of CO_2 in the atmosphere is doubled, compared to the preindustrial age.
-
-
-
-OG snow albedo feedback explained
-This is an example of an early ‘emergent constraint’, a technique seeking strong statistical relationships between parameters describing aspects of current and future climate across a GCM ensemble, which can be both observed and  physically  explained
-
-
-a relationship may emerge between
-a models' simulated variable X of the current climate and Y of the
-models' projections of future climate.
-
-
-Here we try to constrain the spread by using information from observations.
-If there exists a relationship between an observable variable X
-and a future 
-
-
-First the variable 
-
-
-We rescale a models future projection of by how well it
-represents historical observations or quantities.
-
-
-
-Insert example of emerging constraint?
-
-
-
-
-
-(Much simplified) We rescale a models future projection (i.e rain) by how well it fits
-the current observable data.
-Then we can use a ML approach to
-learn: f(model data) = rescaled model projection and
-predict: f(observed data) = projection
-validate with CV etc.
-
-
-
-
-
-
-droughts means no rain
-rain prediction is important
-master thesis 2-fold
-1st create predictive model based on sst to predict precipation
-2nd use emergent constraint
-
-
+# References
