--- a/code/Rmarkdown/eda-ersst.Rmd
+++ b/code/Rmarkdown/eda-ersst.Rmd
@@ -17,7 +17,7 @@ Data are more reliable after 1940.
 
 Data comes in seperate files for each month but can be downloaded to the working directory via bash.
 
-```{bash}
+```{bash, eval = FALSE}
 yr=1880
 while [ $yr -le 2016 ]; do
 nm=1
@@ -36,13 +36,13 @@ We then use the Climate Data Operators (CDO) Software to handle the files for pr
 We do so by using the CDO software on an Ubuntu distribution installed on Windows via WSL2.
 To access the files on Windows in the C folder via Ubuntu we use. 
 
-```{bash}
+```{bash, eval = FALSE}
 cd /mnt/c
 ```
 Then the working directory has to be set to the location of the repository "MA-climate".
 After that we can use the following command to merge the single files into one.
 
-```{bash}
+```{bash, eval = FALSE}
 cdo mergetime data/raw/sst/ersst/*.nc data/raw/sst/ersst.nc
 ```
 
@@ -79,15 +79,16 @@ And now preprocess the whole data for first plots. We inspect the anomalies here
 
 ```{r}
 file <- nc_open("../../data/raw/sst/ersst.nc")
-data <- ncvar_get(file, "ssta")
+df <- ncvar_get(file, "ssta")
 lon <- ncvar_get(file, "lon")
 lat <- ncvar_get(file, "lat")
 lev <- ncvar_get(file, "lev") # is 0 why?
 fill_val <- ncatt_get(file, "ssta", "_FillValue")
+df[df == fill_val$value] <- NA
+# print(file)
 nc_close(file)
-data[data == fill_val$value] <- NA
 ```
-
+2016/12 is last observation
 The data contains `r dim(data)[3]` months of Sea Surface Temperature 
 data, in the geographical window from `r min(lon)` to `r max(lon)`
 longitude and `r min(lat)` to `r max(lat)` latitude respectively.
@@ -98,17 +99,56 @@ We randomly choose one month to plot the ssta
 
 ```{r}
 set.seed(420)
-m <- sample(seq(dim(data)[3]), 1)
-slice <- data[,,m]
+m <- sample(seq(dim(df)[3]), 1)
+slice <- df[,,m]
 r <- raster(t(slice), xmn = min(lon), xmx = max(lon), ymn = min(lat), ymx = max(lat), 
             crs = CRS("+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs+ towgs84=0,0,0"))
 r <- flip(r, direction = "y")
 plot(r)
 ```
+We preprocress the raw files to make with the following code
 
+```{bash, eval = FALSE}
+cdo -z zip setreftime,1900-1-1,00:00:00,months data/raw/sst/ersst.nc data/interim/sst/ersst_setreftime.nc
+cdo -z zip selyear,1981/2015 data/interim/sst/ersst_setreftime.nc data/interim/sst/ersst_selyear.nc
+cdo -z zip sellonlatbox,-180,180,-90,90 data/interim/sst/ersst_selyear.nc data/interim/sst/ersst_sellonlatbox.nc
+```
+We set the null for the timestamps via setreftime, select a certain timewindow
+via selyear and finally set the orientation for the longitude and latitude information
+
+Again we inspect the data and check if the preprocessing didnt mess up anything.
+
+```{r}
+file <- nc_open("../../data/interim/sst/ersst_selyear.nc")
+df <- ncvar_get(file, "ssta")
+lon <- ncvar_get(file, "lon")
+lat <- ncvar_get(file, "lat")
+lev <- ncvar_get(file, "lev") # is 0 why?
+fill_val <- ncatt_get(file, "ssta", "_FillValue")
+df[df == fill_val$value] <- NA
+#print(file)
+nc_close(file)
+```
+
+```{r}
+#dim(df) <- NULL
+#plot(density(na.omit(df)))
+```
+```{r}
+set.seed(420)
+m <- sample(seq(dim(df)[3]), 1)
+slice <- df[,,m]
+r <- raster(t(slice), xmn = min(lon), xmx = max(lon), ymn = min(lat), ymx = max(lat), 
+            crs = CRS("+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs+ towgs84=0,0,0"))
+r <- flip(r, direction = "y")
+plot(r)
+```
+Plot is different because we dont get the same 
+
+
+TODO:
 Next plot maybe a time series of the values in a certain region?
-Also need to preprocess further see cygwin fast
-
+compare timestamps for m = 261 when sampled a slice
 
 
 
