wrote functions for detrend and deseasonlize

--- a/code/Rmarkdown/Deasonalise and Detrend.Rmd
+++ b/code/Rmarkdown/Deasonalise and Detrend.Rmd
@@ -16,18 +16,14 @@ library(ggplot2)
 library(dplyr)
 getwd()
 ```
-
 Load preprocessed data
 
 ```{r}
 sst <- brick("data/interim/sst/ersst_setreftime.nc",
-              varname= "ssta")
+             varname= "ssta")
 #mean_test <- calc(test, fun=mean,na.rm=TRUE)
 #plot(mean_test)
 
-precip <- brick("data/interim/drought/chirps_setreftime.nc", varname = "precip")
-#mean_test2 <- calc(test2, fun=mean, na.rm=TRUE)
-#plot(mean_test2)
 sst
 ```
 
@@ -36,46 +32,63 @@ Plot some of the time series
 extract one time series of values for random grid point that is not NA
 
 ```{r}
-dim(sst)
-n_months <- dim(sst)[3]
-# which grid points are over land?
-  # extract one layer
-r <- raster(sst, layer = 1)
-dim(r) # 89 180 1
-  # get non NA rows and columns of our raster matrix 
-l <- length(r) # 16020
-# get the values from a raster object,
-# if matrix format is wanted as output, add format = "matrix"
-v <- getValues(r)
-# find which are not NA
-not_na <- which(!is.na(v))
-# sample one grid point that is not NA
-rnd_cell <- sample(not_na,1)
-# get the lon lat from this point
-lonlat <- xyFromCell(r, rnd_cell)
+# in: brick object
+# out: random gridcell that is not on land
+#      x is longitude, y is latitude
+
+get_random_cell <- function(brick) {
+  # get one layer as a raster object
+  r <- raster(brick, layer = 1)
+  l <- length(r)
+  vals <- getValues(r)
+  not_na <- which(!is.na(vals))
+  rnd_cell <- sample(not_na, 1)
+  lonlat <- xyFromCell(r, rnd_cell)
+  return(lonlat)
+}
+
+sst_cell <- get_random_cell(sst)
+
+
 ```
 
 
 ```{r}
-# Using GGPLOT, plot the Base World Map
-mp <- NULL
-mapWorld <- borders("world", colour="gray50", fill="gray50") # create a layer of borders
-mp <- ggplot() +   mapWorld
+# in: lonlat info of sea grid point
+# out: a ggplot of point on map
+plot_cell <- function(cell) {
+  # Using GGPLOT, plot the Base World Map
+  mp <- NULL
+  mapWorld <- borders("world", colour="gray50", fill="gray50") # create a layer of borders
+  mp <- ggplot() +   mapWorld
+  
+  #vNow Layer the cities on top
+  mp <- mp+ geom_point(aes(x=cell[1], y=cell[2]), ,color="blue", size=3)
+  mp
+}
 
-#vNow Layer the cities on top
-mp <- mp+ geom_point(aes(x=lonlat[1], y=lonlat[2]), ,color="blue", size=3)
-mp
+plot_cell(sst_cell)
+
 ```
 
 ```{r}
-# now for this random point, take all the time series data and plot it
-vals <- c(extract(sst, rnd_cell))
-head(vals)
-df <- as.data.frame(vals)
-df$time <- 1:dim(df)[1]
-head(df)
-tail(df)
-ggplot(df, aes(x=time,y=vals)) + geom_point() +  geom_line() + geom_smooth()
+# in: dataset and respective cellpoint
+# out: ggplot of time series data for cellpoint
+get_ts <- function(data,cell) {
+  vals <- c(extract(data,cell))
+}
+
+sst_ts <- get_ts(sst, sst_cell)
+
+plot_ts <- function(ts) {
+  df <- as.data.frame(ts)
+  df$month <- 1:length(ts)
+  ggplot(df, aes(x=month, y=ts)) + geom_point() +
+    geom_line() + geom_smooth()
+  
+}
+
+plot_ts(sst_ts)
 ```
 Deasonalise and detrend one time series SST
 
@@ -89,73 +102,46 @@ Deasonalise and detrend all time series SST
 OPEN
 
 ```{r}
-test <- ts(vals, frequency = 12)
-plot.ts(test)
-# test2 <- decompose(test)
-test3 <- stl(test, s.window = "periodic")
-plot(test3)
+plot_stl <- function(values) {
+  time_series <- ts(values, frequency = 12)
+  time_series %>% stl(t.window = 12, s.window = "periodic", robust = TRUE) %>% forecast::autoplot()
+}
+
+plot_stl(sst_ts)
 ```
 
-```{r}
-test %>% stl(t.window = 12, s.window = "periodic", robust = TRUE) %>% forecast::autoplot()
-```
 We have a strong seasonal component here, as can be seen by the bar on the right hand side of the plots.
 
 
 For Precip
 ```{r}
-# data already loaded
+precip <- brick("data/interim/drought/chirps_setreftime.nc", varname = "precip")
+#mean_test2 <- calc(test2, fun=mean, na.rm=TRUE)
+#plot(mean_test2)
+precip
 ```
 
 choose random cell
 ```{r}
-dim(precip)
-# n_months also 432
-r <- raster(precip, layer = 1)
-dim(r) # 180 340 1
-l <- length(r) # 61200
-# get the values from a raster object,
-# if matrix format is wanted as output, add format = "matrix"
-v <- getValues(r)
-rnd_cell <- sample(1:l,1)
-# get the lon lat from this point
-lonlat <- xyFromCell(r, rnd_cell)
+cell_precip <- get_random_cell(precip)
 ```
 
 Plot some of the time series
 ```{r}
-# Using GGPLOT, plot the Base World Map
-mp <- NULL
-mapWorld <- borders("world", colour="gray50", fill="gray50") # create a layer of borders
-mp <- ggplot() +   mapWorld
-
-#vNow Layer the cities on top
-mp <- mp+ geom_point(aes(x=lonlat[1], y=lonlat[2]), ,color="blue", size=3)
-mp
+plot_cell(cell_precip)
 ```
-```{r}
-# now for this random point, take all the time series data and plot it
-vals <- c(extract(precip, rnd_cell))
-head(vals)
-df <- as.data.frame(vals)
-df$time <- 1:dim(df)[1]
-head(df)
-tail(df)
-ggplot(df, aes(x=time,y=vals)) + geom_point() +  geom_line() + geom_smooth()
-```
-```{r}
-test <- ts(vals, frequency = 12)
-plot.ts(test)
-test3 <- stl(test, s.window = "periodic")
-plot(test3)
-```
-Deasonalise and detrend one time series Precip
 
 ```{r}
-test %>% stl(t.window = 12, s.window = "periodic", robust = TRUE) %>% forecast::autoplot()
+precip_ts <- get_ts(precip, cell_precip)
+plot_ts(precip_ts)
 ```
+```{r}
+plot_stl(precip_ts)
+```
+Her for the precip data we have a stronger trend, than a seasonal effect?
+
 
 Compute mean of each month for the Precip time series,
-  get one amazonas rainfall/precip value for each month
+get one amazonas rainfall/precip value for each month
 Deasonalise and detrend the monthly means
 
